--- a/index.html
+++ b/index.html
@@ -18,5 +18,21 @@
         </ul>
       </div>
     </nav>
+
+    <nav id="hamburger-nav">
+      <div class="logo">Karolina Balszan</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onClick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="menu-links">
+          <li><a href="#about" onClick="toggleMenu()">About</a></li>
+          <li><a href="#projects" onClick="toggleMenu()">Projects</a></li>
+          <li><a href="#contact" onClick="toggleMenu()">Contact</a></li>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
