--- a/index.html
+++ b/index.html
@@ -22,17 +22,56 @@
     <nav id="hamburger-nav">
       <div class="logo">Karolina Balszan</div>
       <div class="hamburger-menu">
-        <div class="hamburger-icon" onClick="toggleMenu()">
+        <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
           <span></span>
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onClick="toggleMenu()">About</a></li>
-          <li><a href="#projects" onClick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onClick="toggleMenu()">Contact</a></li>
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
+
+    <section id="hero">
+      <div class="section__pic-container">
+        <img
+          src="./assets/portait.png"
+          alt="Karolina Balszan profile picture"
+        />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I'm</p>
+        <h1 class="title">Karolina Balszan</h1>
+        <p class="section__text__p2">a full stack developer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/resume.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact
+          </button>
+        </div>
+        <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/karolina-balszan/'"
+          />
+          <img
+            src="./assets/github.png"
+            alt="My Github profile"
+            class="icon"
+            onclick="location.href='https://github.com/balszan'"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
