Added an about section

--- a/index.html
+++ b/index.html
@@ -73,5 +73,55 @@
         </div>
       </div>
     </section>
+
+    <section id="about">
+      <h1 class="title">a little about me</h1>
+      <div class="section-container">
+        <div class="about-details-container">
+          <div class="text-container">
+            <p>
+              I'm Karolina Balszan, a recently graduated developer based in
+              London with a first-class honours in computer science. While my
+              degree gave me a strong foundation, I'm always expanding my skills
+              through self-study. On the front-end, I'm comfortable with HTML,
+              CSS, JavaScript, React, Tailwind, and Zustand. For back-end work,
+              I use Node, Express, and Next.js. I rely on Git for version
+              control in my projects. When I'm not coding, you might find me
+              bird watching, enjoying horror movies, or gaming.
+              <br /><br />Here are the skills I'm comfortable with:
+            </p>
+          </div>
+          <div class="about-containers">
+            <div class="details-container">
+              <h3>Frontend</h3>
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>Tailwind</p>
+              <p>JavaScript</p>
+              <p>React.js</p>
+              <p>Zustand</p>
+            </div>
+            <div class="details-container">
+              <h3>Backend</h3>
+              <p>Node.js</p>
+              <p>Express.js</p>
+              <p>Next.js</p>
+            </div>
+            <div class="details-container">
+              <h3>Other</h3>
+              <p>Git</p>
+              <p>OOP concepts</p>
+              <p>MVC pattern</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+      />
+    </section>
   </body>
 </html>
