Added projects section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Karolina Balszan</h1>
+        <h1 class="title">Karolina</h1>
         <p class="section__text__p2">a full stack developer</p>
         <div class="btn-container">
           <button
@@ -122,6 +122,135 @@
         class="icon arrow"
         onclick="location.href='./#projects'"
       />
+    </section>
+
+    <section id="projects">
+      <h1 class="title">my projects</h1>
+      <div class="projects-containers">
+        <div class="details-container">
+          <div class="article-container">
+            <img
+              src="./assets/birdcheck.png"
+              alt="Project 1 preview"
+              class="project-img"
+            />
+          </div>
+
+          <h3 class="projects-sub-title project-title">BirdCheck</h3>
+          <div class="text-container">
+            <p><b>Tech used:</b> HTML, CSS, JavaScript, React.js</p>
+
+            <p class="project-description">
+              BirdCheck is a React-based application that fetches and displays
+              recent bird sightings in the UK using data from eBird and Flickr
+              APIs. It features interactive Leaflet maps to show bird spotting
+              locations and uses localStorage for persistent storage of user
+              data. The application adheres to W3C validation standards and
+              incorporates accessibility best practices.
+            </p>
+          </div>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/balszan/BirdCheck'"
+            >
+              Github
+            </button>
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://birdcheck.netlify.app/'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container">
+          <div class="article-container">
+            <img
+              src="./assets/foodshop.png"
+              alt="Project 1 preview"
+              class="project-img"
+            />
+          </div>
+
+          <h3 class="projects-sub-title project-title">FoodShop</h3>
+          <div class="text-container">
+            <p>
+              <b>Tech used:</b> JavaScript, React.js, Next.js, Tailwind CSS,
+              Zustand Stripe API
+            </p>
+
+            <p class="project-description">
+              FoodShop is a Next.js application that combines frontend and
+              backend functionality, using Zustand for state management and
+              integrating with Stripe for secure payments. The app features a
+              dynamic cart system and is styled with Tailwind CSS for responsive
+              design, while implementing best practices such as server-side
+              rendering and client-side state management.
+            </p>
+          </div>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/balszan/ecommerce'"
+            >
+              Github
+            </button>
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://foodshop-ecommerce-825eabd2890d.herokuapp.com/'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container">
+          <div class="article-container">
+            <img
+              src="./assets/portfolio.png"
+              alt="Project 1 preview"
+              class="project-img"
+            />
+          </div>
+
+          <h3 class="projects-sub-title project-title">Portfolio Website</h3>
+          <div class="text-container">
+            <p><b>Tech used:</b> HTML, CSS, JavaScript</p>
+
+            <p class="project-description">
+              The portfolio website showcases my projects and skills using HTML
+              for structure, CSS for styling, and JavaScript for interactivity.
+              It features a responsive design that adapts to various screen
+              sizes and incorporates aesthetic transitions to enhance user
+              experience.
+            </p>
+          </div>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/balszan/portfolio'"
+            >
+              Github
+            </button>
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://birdcheck.netlify.app/'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
+    </section>
+
+    <section id="contact">
+      <h1 class="title">get in touch</h1>
     </section>
   </body>
 </html>
