Added contact section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,30 @@
 
     <section id="contact">
       <h1 class="title">get in touch</h1>
+      <div class="contact-container">
+        <div class="contact-detail">
+          <img src="./assets/email.png" alt="Email icon" class="icon" />
+          <p><a href="mailto:kbalszan@gmail.com">kbalszan@gmail.com</a></p>
+        </div>
+        <div class="contact-detail">
+          <img src="./assets/linkedin.png" alt="Linkedin icon" class="icon" />
+          <p>
+            <a href="https://www.linkedin.com/in/karolina-balszan/">Linkedin</a>
+          </p>
+        </div>
+      </div>
     </section>
+    <footer>
+      <nav id="footer-nav">
+        <div>
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright © 2024 Karolina Balszan. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
