Added media queries

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
         <img
           src="./assets/portait.png"
           alt="Karolina Balszan profile picture"
+          class="hero-pic"
         />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Karolina</h1>
+        <h1 class="title karolina">Karolina</h1>
         <p class="section__text__p2">a full stack developer</p>
         <div class="btn-container">
           <button
@@ -274,7 +275,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright © 2024 Karolina Balszan. All Rights Reserved.</p>
+      <p>Karolina Balszan 2024</p>
     </footer>
   </body>
 </html>
