--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </button>
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://birdcheck.netlify.app/'"
+              onclick="location.href='https://balszan.netlify.app/'"
             >
               Live Demo
             </button>
