--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karolina Balszan's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
+
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -94,25 +101,78 @@
           </div>
           <div class="about-containers">
             <div class="details-container">
-              <h3>Frontend</h3>
-              <p>HTML</p>
-              <p>CSS</p>
-              <p>Tailwind</p>
-              <p>JavaScript</p>
-              <p>React.js</p>
-              <p>Zustand</p>
+              <h2>Frontend</h2>
+
+              <div class="skills">
+                <div class="tech">
+                  <i class="devicon-html5-plain"></i>
+                  <p>HTML</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-css3-plain"></i>
+                  <p>CSS</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-tailwindcss-original"></i>
+                  <p>Tailwind</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-javascript-plain"></i>
+                  <p>JavaScript</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-react-original"></i>
+                  <p>React.js</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-tailwindcss-original"></i>
+                  <p>Zustand</p>
+                </div>
+              </div>
             </div>
             <div class="details-container">
-              <h3>Backend</h3>
-              <p>Node.js</p>
-              <p>Express.js</p>
-              <p>Next.js</p>
+              <h2>Backend</h2>
+              <div class="skills">
+                <div class="tech">
+                  <i class="devicon-nodejs-plain"></i>
+                  <p>Node.js</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-express-original"></i>
+                  <p>Express.js</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-nextjs-plain"></i>
+                  <p>Next.js</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-mongodb-plain"></i>
+                  <p>MongoDB</p>
+                </div>
+              </div>
             </div>
             <div class="details-container">
-              <h3>Other</h3>
-              <p>Git</p>
-              <p>OOP concepts</p>
-              <p>MVC pattern</p>
+              <h2>Other</h2>
+
+              <div class="skills">
+                <div class="tech">
+                  <i class="devicon-git-plain"></i>
+                  <p>Git</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-webpack-plain"></i>
+                  <p>Webpack</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -137,7 +197,7 @@
             />
           </div>
 
-          <h3 class="projects-sub-title project-title">BirdCheck</h3>
+          <h2 class="projects-sub-title project-title">BirdCheck</h2>
           <div class="text-container">
             <p><b>Tech used:</b> HTML, CSS, JavaScript, React.js</p>
 
@@ -174,7 +234,7 @@
             />
           </div>
 
-          <h3 class="projects-sub-title project-title">FoodShop</h3>
+          <h2 class="projects-sub-title project-title">FoodShop</h2>
           <div class="text-container">
             <p>
               <b>Tech used:</b> JavaScript, React.js, Next.js, Tailwind CSS,
@@ -214,7 +274,7 @@
             />
           </div>
 
-          <h3 class="projects-sub-title project-title">Portfolio Website</h3>
+          <h2 class="projects-sub-title project-title">Portfolio Website</h2>
           <div class="text-container">
             <p><b>Tech used:</b> HTML, CSS, JavaScript</p>
 
