Fixed minor styling issues

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="section-container">
         <div class="about-details-container">
           <div class="text-container">
-            <p>
+            <p class="bio">
               I'm Karolina Balszan, a recently graduated developer based in
               London with a first-class honours in computer science. While my
               degree gave me a strong foundation, I'm always expanding my skills
@@ -96,7 +96,9 @@
               I use Node, Express, and Next.js. I rely on Git for version
               control in my projects. When I'm not coding, you might find me
               bird watching, enjoying horror movies, or gaming.
-              <br /><br />Here are the skills I'm comfortable with:
+            </p>
+            <p id="skills-subtitle">
+              Here are the skills I'm comfortable with:
             </p>
           </div>
           <div class="about-containers">
