--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title karolina">Karolina</h1>
-        <p class="section__text__p2">a full stack developer</p>
+        <p class="section__text__p2">a software engineer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -93,9 +93,12 @@
               degree gave me a strong foundation, I'm always expanding my skills
               through self-study. On the front-end, I'm comfortable with HTML,
               CSS, JavaScript, React, Tailwind, and Zustand. For back-end work,
-              I use Node, Express, and Next.js. I rely on Git for version
-              control in my projects. When I'm not coding, you might find me
-              bird watching, enjoying horror movies, or gaming.
+              I'm proficient with Node, Express, Next.js, Java, Spring Boot, and
+              Python. I have experience with both SQL and NoSQL databases like
+              MongoDB, and I've worked with message queuing systems such as
+              RabbitMQ. I rely on Git for version control in my projects. When
+              I'm not coding, you might find me bird watching, enjoying horror
+              movies, or gaming.
             </p>
             <p id="skills-subtitle">
               Here are the skills I'm comfortable with:
