--- a/index.html
+++ b/index.html
@@ -110,33 +110,28 @@
 
               <div class="skills">
                 <div class="tech">
-                  <i class="devicon-html5-plain"></i>
+                  <i class="devicon-html5-plain colored"></i>
                   <p>HTML</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-css3-plain"></i>
+                  <i class="devicon-css3-plain colored"></i>
                   <p>CSS</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-tailwindcss-original"></i>
+                  <i class="devicon-tailwindcss-plain colored"></i>
                   <p>Tailwind</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-javascript-plain"></i>
+                  <i class="devicon-javascript-plain colored"></i>
                   <p>JavaScript</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-react-original"></i>
+                  <i class="devicon-react-original colored"></i>
                   <p>React.js</p>
-                </div>
-
-                <div class="tech">
-                  <i class="devicon-tailwindcss-original"></i>
-                  <p>Zustand</p>
                 </div>
               </div>
             </div>
@@ -144,37 +139,57 @@
               <h2>Backend</h2>
               <div class="skills">
                 <div class="tech">
-                  <i class="devicon-nodejs-plain"></i>
+                  <i class="devicon-nodejs-plain colored"></i>
                   <p>Node.js</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-express-original"></i>
+                  <i class="devicon-express-original colored"></i>
                   <p>Express.js</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-nextjs-plain"></i>
+                  <i class="devicon-nextjs-original-wordmark"></i>
                   <p>Next.js</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-mongodb-plain"></i>
-                  <p>MongoDB</p>
+                  <i class="devicon-java-plain colored"></i>
+                  <p>Java</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-spring-plain colored"></i>
+                  <p>Spring Boot</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-python-plain colored"></i>
+                  <p>Python</p>
                 </div>
               </div>
             </div>
             <div class="details-container">
-              <h2>Other</h2>
+              <h2>Databases & Tools</h2>
 
               <div class="skills">
                 <div class="tech">
-                  <i class="devicon-git-plain"></i>
+                  <i class="devicon-mongodb-plain colored"></i>
+                  <p>MongoDB</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-mysql-plain colored"></i>
+                  <p>SQL</p>
+                </div>
+
+                <div class="tech">
+                  <i class="devicon-git-plain colored"></i>
                   <p>Git</p>
                 </div>
 
                 <div class="tech">
-                  <i class="devicon-webpack-plain"></i>
+                  <i class="devicon-webpack-plain colored"></i>
                   <p>Webpack</p>
                 </div>
               </div>
